--- a/templates/products/addHours.html
+++ b/templates/products/addHours.html
@@ -3,12 +3,10 @@
 
 {% block content %}
 
-<hr>
-
-  <h1 style="font-size: 40px; margin-left: 30px;" class="p-2">
+  <h1 style="font-size: 30px; margin-left: 30px;" class="mt-3">
      Add Hours Page
   </h1>
-
+    {{ product.name }}
   <div class="container m-3">
       <form action="" method="post" enctype="multipart/form-data">
 
@@ -22,8 +20,8 @@
             </div>
           </div>
 
-          <input class="btn btn-primary mt-2" type="submit" name="Submit">
-
+          <input class="btn btn-success mt-2" type="submit" name="Submit">
+          <a class="btn btn-primary mt-2" href="{% url 'showProjects' %}" role="button">Projects</a> <br/>
       </form>
   </div>
 
