--- a/templates/products/showProducts.html
+++ b/templates/products/showProducts.html
@@ -20,10 +20,10 @@
                     <div class="card m-3 p-3" style="width: 18rem; height: 35rem; box-shadow: 4px 4px #c291fa; border-radius: 25px 15px;">
                         <img src="{{ product.image.url }}" style="float:center; height: 250px; width: 250px;"  class="card-img-top product" alt="image not found">
                         <div class="card-body">
-                            <h4 style="font-size: 17px;" class="card-title mt-1">{{ product.name }}</h4>
+                            <h4 style="font-size: 17px;" class="card-title mt-1">{{ product.name }} </h4>
                             <h3 style="color: rgb(16, 52, 107)" class="card-subtitle mt-1">{{ product.hours }} h</h3>
                             <hr>
-                            <p style="font-size: 13px;" class="btn btn-warning"><b>{{ product.Project.name }}</b></p>
+                            <p href="{{ dropboxlink }}" style="font-size: 13px;" class="btn btn-warning"><b>{{ product.Project.name }}</b></p>
                             <p style="font-size: 13px;" class="cart-text mt-1">{{ product.created_at }}</p>                
                         </div>
                         <span>
@@ -34,7 +34,7 @@
                                 data-Project="{{ product.Project.name }}"
                                 class="btn btn-outline-success add-to-cart">Done
                             </button></td>
-                            <a href="{% url 'product' product.pk  %}" style="background-color: #5707b3;" class="btn btn-primary m-1">Detail</a>
+                            <a href="{% url 'product' product.pk  %}" style="" class="btn btn-primary m-1">Detail</a>
                             <a href="{% url 'addHours' product.pk %}" style="" class="btn btn-success m-0">Hours</a>
                         </span>
 
