--- a/templates/products/users_list.html
+++ b/templates/products/users_list.html
@@ -11,6 +11,12 @@
     <a class="btn btn-success m-1" href="{% url 'project_create' %}" role="button">Add project </a>
     <a class="btn btn-primary m-1" href="{% url 'working-hours' user.pk %}" role="button">My hours </a>
 
+    <form action="{% url 'send-message' %}" method="post">
+        {% csrf_token %}
+        <input type="submit" value="Send Facebook Message" class="btn btn-primary">
+    </form>
+
+
     <table class="table">
         <tr>
             <th>Number</th>
