Last version before separate app for quiz

--- a/templates/products/quiz_results.html
+++ b/templates/products/quiz_results.html
@@ -6,7 +6,7 @@
         .correct { color: green; }
         .incorrect { color: red; }
     </style>
-</head>
+</head>a
 <style>
     .custom-list {
         list-style-type: none; /* Removes default bullets */
@@ -45,6 +45,6 @@
         {% endfor %}
     </ul>
 
-    <a href="{% url 'quiz' %}">Take the Quiz Again</a>
+    <a href="{% url 'quiz_selection' %}">Take the Quiz Again</a>
 </body>
 </html>
